--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -8,7 +8,7 @@
 		description="Shareaza English Skin File"
 		link="http://shareaza.sourceforge.net/"
 		email="(author e-mail)"
-		version="2.4.0.2"
+		version="2.4.1.0"
 		type="Language"
 		language="en"
 		prompt="Click here to select English as your natural language."
@@ -1219,8 +1219,6 @@
 		<menu text="_Web Services">
 			<item id="ID_LIBRARY_BITZI_WEB" text="View _Bitzi Ticket"/>
 			<item id="ID_LIBRARY_BITZI_DOWNLOAD" text="_Download Metadata"/>
-			<separator/>
-			<item id="ID_LIBRARY_URL" text=""/>
 		</menu>
 		<menu text="O_rganise">
 			<item id="ID_LIBRARY_RENAME" text="_Rename File"/>
@@ -1238,7 +1236,7 @@
 		<separator/>
 		<item id="ID_LIBRARY_SHARED_FILE" text="_Shared"/>
 		<separator/>
-		<item id="ID_LIBRARY_URL" text=""/>
+		<item id="ID_LIBRARY_URL" text="Copy _URI"/>
 		<item id="ID_LIBRARY_DELETE" text="_Delete"/>
 		<separator/>
 		<menu text="S_earch For">
@@ -1289,8 +1287,6 @@
 		<menu text="_Web Services">
 			<item id="ID_LIBRARY_BITZI_WEB" text="View _Bitzi Ticket"/>
 			<item id="ID_LIBRARY_BITZI_DOWNLOAD" text="_Download Metadata"/>
-			<separator/>
-			<item id="ID_LIBRARY_URL" text=""/>
 		</menu>
 		<menu text="O_rganise">
 			<item id="ID_LIBRARY_RENAME" text="_Rename File"/>
@@ -1312,7 +1308,7 @@
 		<separator/>
 		<item id="ID_LIBRARY_SHARED_FILE" text="_Shared"/>
 		<separator/>
-		<item id="ID_LIBRARY_URL" text=""/>
+		<item id="ID_LIBRARY_URL" text="Copy _URI"/>
 		<item id="ID_LIBRARY_DELETE" text="_Delete"/>
 		<separator/>
 		<menu text="S_earch For">
@@ -3261,7 +3257,7 @@
 	<string id="19002" value="Unable to accept connections, URL unavailable."/>
 	<string id="20000" value="No URN available"/>
 	<string id="20001" value="Close"/>
-	<string id="20002" value="of (e.g. 1 of 10)"/>
+	<string id="20002" value="of"/> <!-- (e.g. 1 of 10) -->
 	<string id="20003" value="Changing interface direction requires restart. \nYou will need to start Shareaza manually. Exit now?"/>
 	<string id="20005" value="No"/>
 	<string id="20006" value="Yes"/>
@@ -3300,16 +3296,16 @@
 	<string id="20125" value="Verified"/>
 	<string id="20126" value="Unverified"/>
 	<string id="20127" value="source"/>
-	<string id="20128" value="sources (numbers 21, 31, ...)"/>
-	<string id="20129" value="sources (tens)"/>
-	<string id="20130" value="sources (from 11 to 19)"/>
-	<string id="20131" value="sources (from 2 to 4)"/>
-	<string id="20132" value="sources (from 5 to 9)"/>
+	<string id="20128" value="sources"/> <!--(numbers 21, 31, ...)-->
+	<string id="20129" value="sources"/> <!--(tens)-->
+	<string id="20130" value="sources"/> <!--(from 11 to 19)-->
+	<string id="20131" value="sources"/> <!--(from 2 to 4)-->
+	<string id="20132" value="sources"/> <!--(from 5 to 9)-->
 	<string id="20133" value="Uninterested"/>
 	<string id="20134" value="Choked"/>
 	<string id="20135" value="Next"/>
 	<string id="20136" value="Q"/>
-	<string id="20137" value="sources (3/10 sources, for e.g.)"/>
+	<string id="20137" value="sources"/> <!--(e.g. 3/10 sources)-->
 	<string id="20200" value="Sunday"/>
 	<string id="20201" value="Monday"/>
 	<string id="20202" value="Tuesday"/>
