--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -2,18 +2,19 @@
 
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
 <!-- Manifest -->
-<manifest	name="English"
+<manifest	name="(translation language: English)"
 		author="(translation author)"
 		updatedBy="(translation updaters)"
-		description="Shareaza English Skin File"
-		link="http://shareaza.sourceforge.net/"
+		description="(translation description: Shareaza English Skin File)"
+		link="(translation URL: http://shareaza.sourceforge.net/)"
 		email="(author e-mail)"
-		version="2.4.1.0"
+		version="(shareaza version)"
 		type="Language"
-		language="en"
-		prompt="Click here to select English as your natural language."
-		dir="ltr"
+		language="(translation language code: en)"
+		prompt="(translation prompt: Click here to select English as your natural language.)"
+		dir="(translation language direction: ltr or rtl)"
 />
+
 <!-- Toolbar Definitions -->
 <toolbars>
 	<!-- MAIN WINDOW -->
@@ -3257,7 +3258,7 @@
 	<string id="19002" value="Unable to accept connections, URL unavailable."/>
 	<string id="20000" value="No URN available"/>
 	<string id="20001" value="Close"/>
-	<string id="20002" value="of"/> <!-- (e.g. 1 of 10) -->
+	<string id="20002" value="of (e.g. 1 of 10)"/>
 	<string id="20003" value="Changing interface direction requires restart. \nYou will need to start Shareaza manually. Exit now?"/>
 	<string id="20005" value="No"/>
 	<string id="20006" value="Yes"/>
@@ -3296,16 +3297,16 @@
 	<string id="20125" value="Verified"/>
 	<string id="20126" value="Unverified"/>
 	<string id="20127" value="source"/>
-	<string id="20128" value="sources"/> <!--(numbers 21, 31, ...)-->
-	<string id="20129" value="sources"/> <!--(tens)-->
-	<string id="20130" value="sources"/> <!--(from 11 to 19)-->
-	<string id="20131" value="sources"/> <!--(from 2 to 4)-->
-	<string id="20132" value="sources"/> <!--(from 5 to 9)-->
+	<string id="20128" value="sources (numbers 21, 31, ...)"/>
+	<string id="20129" value="sources (tens)"/>
+	<string id="20130" value="sources (from 11 to 19)"/>
+	<string id="20131" value="sources (from 2 to 4)"/>
+	<string id="20132" value="sources (from 5 to 9)"/>
 	<string id="20133" value="Uninterested"/>
 	<string id="20134" value="Choked"/>
 	<string id="20135" value="Next"/>
 	<string id="20136" value="Q"/>
-	<string id="20137" value="sources"/> <!--(e.g. 3/10 sources)-->
+	<string id="20137" value="sources (e.g. 3/10 sources)"/>
 	<string id="20200" value="Sunday"/>
 	<string id="20201" value="Monday"/>
 	<string id="20202" value="Tuesday"/>
