Updated Russian translation.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8262 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-ru.po
+++ b/Languages/default-ru.po
@@ -4426,7 +4426,7 @@ msgstr "Информация о торренте"
 
 #: string;8013
 msgid "No new Shareaza version detected."
-msgstr "Нет новых Shareaza версия обнаружено."
+msgstr "Новых версий Shareaza не обнаружено."
 
 #: string;8014 dialog;cdownloadeditpage
 msgid "Download Properties"
