--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -2632,7 +2632,7 @@
 		<string id="8010" value="Это предвыпускная версия Shareaza, и период бета тестирования закончился.  Пожалуйста загрузите полную, официальную версию с http://shareaza.sourceforge.net/."/>
 		<string id="8011" value="При смене вида все открытые Вами окна будут закрыты.  Хотите ли переключить сейчас?"/>
 		<string id="8012" value="Информация о торренте"/>
-		<string id="8013" value="Нет новых Shareaza версия обнаружено."/>
+		<string id="8013" value="Новых версий Shareaza не обнаружено."/>
 		<string id="8014" value="Свойства загрузки"/>
 		<string id="8060" value="Узел/режим Ведущего с %lu хостом(ами).  %s в собсвенном хранилище."/>
 		<string id="8061" value="Режим Ведущего с %lu хостом(ами).  %s в собсвенном хранилище."/>
