Updated Russian translation.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8266 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-ru.po
+++ b/Languages/default-ru.po
@@ -6984,7 +6984,9 @@ msgstr "из"
 msgid ""
 "Changing interface direction requires restart. \\n"
 "You will need to start Shareaza manually. Exit now?"
-msgstr "Для смены направления интерфейса Вы должны вручную перезапустить Shareaza.\\?Выйти сейчас?"
+msgstr ""
+"Для смены направления интерфейса Вы должны перезапустить Shareaza. \\n"
+"Выйти сейчас?"
 
 #: string;20005
 msgid "No"
