--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -3240,7 +3240,7 @@
 		<string id="20000" value="Нет доступных ссылок"/>
 		<string id="20001" value="Закрыть"/>
 		<string id="20002" value="из"/>
-		<string id="20003" value="Для смены направления интерфейса Вы должны вручную перезапустить Shareaza.\?Выйти сейчас?"/>
+		<string id="20003" value="Для смены направления интерфейса Вы должны перезапустить Shareaza. \nВыйти сейчас?"/>
 		<string id="20005" value="Нет"/>
 		<string id="20006" value="Да"/>
 		<string id="20007" value="Авто"/>
