--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -3635,19 +3635,19 @@
 			<control caption="Соединиться с eDonkey сегодня"/>
 			<control caption="Всегда соединяться с eDonkey"/>
 			<control caption="_Глобальный поиск:"/>
-			<control caption="Поиск в кэше известных удаленных серверов:"/>
-			<control caption="Стоп поиска после:"/>
+			<control caption="Искать по списку известных серверов:"/>
+			<control caption="Останов поиска после:"/>
 			<control/>
 			<control/>
 			<control caption="результатов."/>
-			<control caption="Получать и обновлять список серверов с соединенного сервера"/>
+			<control caption="Получать и обновлять список серверов с сервера"/>
 			<control caption="С_оединения с клиентами:"/>
 			<control caption="Соединять не более чем с:"/>
 			<control/>
 			<control/>
-			<control caption="другими eDonkey клиентами."/>
+			<control caption="eDonkey-клиентами."/>
 			<control caption="eDonkey _утилиты:"/>
-			<control caption="Загрузить список серверов из вба:"/>
+			<control caption="Загрузить список серверов из интернета:"/>
 			<control caption="Загрузить..."/>
 		</dialog>
 		<dialog name="CBitTorrentSettingsPage" cookie="BuBuBuEdmsStEdmsStBuEdmsStBuBuBuBuEdBuBuEdBuStEd" caption="BitTorrent">
@@ -3660,20 +3660,20 @@
 			<control/>
 			<control/>
 			<control caption="Клиентских соединений"/>
-			<control caption=" Убрать загружен. торренты при достижении соотношения"/>
+			<control caption="Остановить раздачу торрентов при достижении ими:"/>
 			<control/>
 			<control/>
 			<control caption="%"/>
 			<control caption=" Предпочитать источники торрентов"/>
-			<control caption="_ЕndGame (ускорение):"/>
-			<control caption="Переходить в режим EndGame при завершении торрентов"/>
+			<control caption="_Режим &quot;Конец Игры&quot;:"/>
+			<control caption="Использовать режим &quot;Конец Игры&quot; при завершении торрентов"/>
 			<control caption="_Держать торренты в папке:"/>
 			<control/>
 			<control/>
-			<control caption="_Программа для создания торрентов"/>
+			<control caption="_Программа для создания торрентов:"/>
 			<control/>
 			<control/>
-			<control caption="Трекер по умолч.: "/>
+			<control caption="Трекер: "/>
 			<control/>
 		</dialog>
 		<dialog name="CProtocolsSettingsPage" cookie="BuSy" caption="Протоколы">
